--- a/index.html
+++ b/index.html
@@ -227,6 +227,16 @@
                         class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
                     <p class="text-sm sm:text-base font-semibold">Designer - Vexzy</p>
                 </div>
+                <div class="flex flex-col items-center">
+                    <img src="assets/img/staff/vin.png" alt="Chat Moderator - Vin"
+                        class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
+                    <p class="text-sm sm:text-base font-semibold">Chat Moderator - Vin</p>
+                </div>
+                <div class="flex flex-col items-center">
+                    <img src="assets/img/staff/mirqan.png" alt="Chat Moderator - Mirqan"
+                        class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
+                    <p class="text-sm sm:text-base font-semibold">Chat Moderator - Mirqan</p>
+                </div>
             </div>
         </div>
     </section>
