--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,9 @@
     <title>Document</title>
 </head>
 <style>
-    * {
+    *,
+    html,
+    body {
         scroll-behavior: smooth;
     }
 </style>
@@ -32,9 +34,10 @@
             <ul class="flex flex-col md:flex-row gap-5">
                 <li><a href="#home" class="text-white hover:text-yellow-400 transition-all duration-300">Home</a></li>
                 <li><a href="#about" class="text-white hover:text-yellow-400 transition-all duration-300">About</a></li>
-                <li><a href="#leaderboard"
+                <li><a href="channel/leaderboard.html"
                         class="text-white hover:text-yellow-400 transition-all duration-300">Leaderboard</a></li>
-                <li><a href="#staff" class="text-white hover:text-yellow-400 transition-all duration-300">Staff</a></li>
+                <li><a href="channel/staff.html"
+                        class="text-white hover:text-yellow-400 transition-all duration-300">Staff</a></li>
             </ul>
         </nav>
 
@@ -48,10 +51,10 @@
                 <li><a href="#about"
                         class="text-white hover:bg-neutral-800 px-9 py-2 rounded transition-all duration-300">About</a>
                 </li>
-                <li><a href="#leaderboard"
+                <li><a href="channel/leaderboard.html"
                         class="text-white hover:bg-neutral-800 px-9 py-2 rounded transition-all duration-300">Leaderboard</a>
                 </li>
-                <li><a href="#staff"
+                <li><a href="channel/staff.html"
                         class="text-white hover:bg-neutral-800 px-9 py-2 rounded transition-all duration-300">Staff</a>
                 </li>
             </ul>
@@ -84,12 +87,12 @@
     </section>
 
     <!-- ABOUT -->
-    <section class="h-auto bg-black/90 text-white flex justify-center items-center p-5 py-20 shadow-4xl" id="about">
+    <section class="h-auto bg-black/90 text-white flex justify-center items-center p-5 py-36 shadow-4xl" id="about">
         <div class="bg-black/25 flex flex-col justify-center items-center p-7 rounded-lg shadow-lg max-w-4xl mx-auto space-y-8"
             data-aos="fade-up">
             <!-- Header Section -->
             <div class="text-center">
-                <h1 class="text-2xl sm:text-3xl lg:text-4xl font-bold tracking-wider">
+                <h1 class="text-xl sm:text-2xl md:text-3xl font-bold tracking-wider">
                     ABOUT - <span class="font-extrabold text-yellow-400">SMKN 5 KIEV</span>
                 </h1>
             </div>
@@ -142,111 +145,11 @@
         </div>
     </section>
 
-    <!-- Leaderboard -->
-    <div class="sectionLeaderboard bg-black/90 bg-cover bg-center text-white py-12" id="leaderboard">
-        <div class="leaderboardContainer container mx-auto px-4" data-aos="fade-up">
-            <div class="leaderboardBox bg-black/25 bg-opacity-75 rounded-lg shadow-lg p-7">
-                <div class="leaderboardBox-item">
-                    <div class="leaderboardBox-itemTitle text-center mb-6">
-                        <h1 class="text-base sm:text-xl font-bold">
-                            MONTHLY <span class="text-yellow-400">LEADERBOARD</span>
-                        </h1>
-                        <p class="text-gray-400 text-sm mt-2">Top Monthly Season SMKN 5 KIEV</p>
-                    </div>
-                    <!-- Kontainer untuk item -->
-                    <div class="leaderboardBox-itemList flex flex-wrap gap-4 justify-center">
-                        <!-- Item 1 -->
-                        <div class="flex items-center gap-4 bg-zinc-800 bg-opacity-80 rounded-md p-4">
-                            <div class="w-7 h-7 sm:w-12 sm:h-12">
-                                <img src="assets/img/s1.png" alt="s1" class="w-full h-full object-cover rounded-full">
-                            </div>
-                            <div>
-                                <p class="text-sm sm:text-base font-semibold">Season #1 | Luhut</p>
-                            </div>
-                        </div>
-                        <!-- Item 2 -->
-                        <div class="flex items-center gap-4 bg-zinc-800 bg-opacity-80 rounded-md p-4">
-                            <div class="w-7 h-7 sm:w-12 sm:h-12">
-                                <img src="assets/img/s2.png" alt="s2" class="w-full h-full object-cover rounded-full">
-                            </div>
-                            <div>
-                                <p class="text-sm sm:text-base font-semibold">Season #2 | Luhut</p>
-                            </div>
-                        </div>
-                        <!-- Item 3 -->
-                        <div class="flex items-center gap-4 bg-zinc-800 bg-opacity-80 rounded-md p-4">
-                            <div class="w-7 h-7 sm:w-12 sm:h-12">
-                                <img src="assets/img/s3.png" alt="s3" class="w-full h-full object-cover rounded-full">
-                            </div>
-                            <div>
-                                <p class="text-sm sm:text-base font-semibold">Season #3 | nsx4y</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- STAFF -->
-    <section id="staff" class="bg-black/90 text-white py-12">
-        <div class="bg-black/20 p-20 container mx-auto rounded-lg shadow-lg" data-aos="fade-up">
-            <div class="text-center mb-8">
-                <h1 class="text-xl sm:text-2xl md:text-4xl font-bold">OUR <span class="text-yellow-500">STAFF</span>
-                </h1>
-                <p class="text-sm">List Staff SMKN 5 KIEV</p>
-            </div>
-            <div class="flex flex-wrap justify-center gap-12">
-                <div class="flex flex-col items-center">
-                    <img src="assets/img/staff/phion.png" alt="Founder - Phy0n"
-                        class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
-                    <p class="text-sm sm:text-base font-semibold">Founder - Phy0n</p>
-                </div>
-                <div class="flex flex-col items-center">
-                    <img src="assets/img/staff/tame.png" alt="Admin - nsx4y"
-                        class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
-                    <p class="text-sm sm:text-base font-semibold">Admin - nsx4y</p>
-                </div>
-                <div class="flex flex-col items-center">
-                    <img src="assets/img/staff/luhut.png" alt="Developer - Luhut"
-                        class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
-                    <p class="text-sm sm:text-base font-semibold">Developer - Luhut</p>
-                </div>
-                <div class="flex flex-col items-center">
-                    <img src="assets/img/staff/Ollisha.png" alt="Partner Manager - Ollisha"
-                        class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
-                    <p class="text-sm sm:text-base font-semibold">Partner Manager - Ollisha</p>
-                </div>
-                <div class="flex flex-col items-center">
-                    <img src="assets/img/staff/Mala.png" alt="Designer - Mala"
-                        class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
-                    <p class="text-sm sm:text-base font-semibold">Designer - Mala</p>
-                </div>
-                <div class="flex flex-col items-center">
-                    <img src="assets/img/staff/v3xxy.png" alt="Designer - Vexzy"
-                        class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
-                    <p class="text-sm sm:text-base font-semibold">Designer - Vexzy</p>
-                </div>
-                <div class="flex flex-col items-center">
-                    <img src="assets/img/staff/vin.png" alt="Chat Moderator - Vin"
-                        class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
-                    <p class="text-sm sm:text-base font-semibold">Chat Moderator - Vin</p>
-                </div>
-                <div class="flex flex-col items-center">
-                    <img src="assets/img/staff/mirqan.png" alt="Chat Moderator - Mirqan"
-                        class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
-                    <p class="text-sm sm:text-base font-semibold">Chat Moderator - Mirqan</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
     <!-- Footer -->
     <section id="footer" class="bg-zinc-950 text-white py-12">
         <div class="container mx-auto px-4">
             <div class=" flex-col md:flex-row justify-between items-center">
-                <div class="mb-8 md:mb-0 md:mr-8" data-aos="fade-right">
+                <div class="mb-8 md:mb-0 md:mr-8" data-aos="fade-out">
                     <h1 class="text-xl sm:text-3xl font-bold mb-4 text-yellow-500">SMKN 5 KIEV</h1>
                     <p class="text-sm sm:text-base leading-relaxed">
                         We created this server to have fun and build a friendly community. We’d be thrilled if you
@@ -260,11 +163,6 @@
             </div>
         </div>
     </section>
-
-
-    <!-- <footer class="footer">
-        <p>Copyright by SMKN 5 KIEV | Dont Copy Anything</p>
-    </footer> -->
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
