--- a/channel/leaderboard.html
+++ b/channel/leaderboard.html
@@ -40,10 +40,10 @@
         <nav id="dropdown-menu"
             class="md:hidden absolute top-16 left-0 w-full bg-black/70 p-4 space-y-4 shadow-lg transform transition-all duration-300 hidden text-center">
             <ul class="space-y-4"> <!-- Menambahkan space-y-4 untuk jarak antar list item -->
-                <li><a href="#home"
+                <li><a href="../index.html#home"
                         class="text-white hover:bg-neutral-800 px-9 py-2 rounded transition-all duration-300">Home</a>
                 </li>
-                <li><a href="#about"
+                <li><a href="../index.html/#about"
                         class="text-white hover:bg-neutral-800 px-9 py-2 rounded transition-all duration-300">About</a>
                 </li>
                 <li><a href="leaderboard.html"
