--- a/channel/staff.html
+++ b/channel/staff.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>Document</title>
+    <link rel="icon" type="image/png" href="../assets/img/logo.png">
+    <title>STAFF</title>
 </head>
 
 <body>
@@ -71,21 +72,21 @@
                     <div
                         class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
                         <img src="../assets/img/staff/tame.png" alt="Admin - nsx4y"
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
+                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
                         <p class="text-sm sm:text-base font-semibold">Tame</p>
                         <p class="text-sm sm:text-base font-light">Moderator Chat</p>
                     </div>
                     <div
                         class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
                         <img src="../assets/img/staff/phion.png" alt="Founder - Phy0n"
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
+                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
                         <p class="text-sm sm:text-base font-semibold">Phy0n</p>
                         <p class="text-sm sm:text-base font-light">Website Developer</p>
                     </div>
                     <div
                         class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
                         <img src="../assets/img/staff/luhut.png" alt="Developer - Luhut"
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
+                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
                         <p class="text-sm sm:text-base font-semibold">Luhut</p>
                         <p class="text-sm sm:text-base font-light">Bot Developer</p>
                     </div>
@@ -103,7 +104,7 @@
                     <div
                         class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
                         <img src="../assets/img/staff/phion.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
+                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
                         <p class="text-sm sm:text-base font-semibold">Phy0n</p>
                         <p class="text-sm sm:text-base font-light">Website Developer</p>
                     </div>
@@ -121,42 +122,42 @@
                     <div
                         class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
                         <img src="../assets/img/staff/lenn.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
+                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
                         <p class="text-sm sm:text-base font-semibold">Lenn</p>
                         <p class="text-sm sm:text-base font-light">Partner Manager</p>
                     </div>
                     <div
                         class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
                         <img src="../assets/img/staff/crystal.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
+                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
                         <p class="text-sm sm:text-base font-semibold">Crystal</p>
                         <p class="text-sm sm:text-base font-light">Partner Manager</p>
                     </div>
                     <div
                         class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
                         <img src="../assets/img/staff/vexzy.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
+                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
                         <p class="text-sm sm:text-base font-semibold">Vexzy</p>
                         <p class="text-sm sm:text-base font-light">Designer</p>
                     </div>
                     <div
                         class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
                         <img src="../assets/img/staff/yura.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
+                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
                         <p class="text-sm sm:text-base font-semibold">Yura</p>
                         <p class="text-sm sm:text-base font-light">Designer</p>
                     </div>
                     <div
                         class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
                         <img src="../assets/img/staff/ivy.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
+                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
                         <p class="text-sm sm:text-base font-semibold">Ivy</p>
                         <p class="text-sm sm:text-base font-light">Designer</p>
                     </div>
                     <div
                         class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
                         <img src="../assets/img/staff/erza.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
+                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
                         <p class="text-sm sm:text-base font-semibold">Erza</p>
                         <p class="text-sm sm:text-base font-light">Moderator</p>
                     </div>
@@ -181,35 +182,35 @@
                     <div
                         class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
                         <img src="../assets/img/staff/nopal.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
+                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
                         <p class="text-sm sm:text-base font-semibold">Zall</p>
                         <p class="text-sm sm:text-base font-light">Event Organizer</p>
                     </div>
                     <div
                         class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
                         <img src="../assets/img/staff/vendrika.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
+                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
                         <p class="text-sm sm:text-base font-semibold">Vendrika</p>
                         <p class="text-sm sm:text-base font-light">Event Organizer</p>
                     </div>
                     <div
                         class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
                         <img src="../assets/img/staff/eyl.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
+                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
                         <p class="text-sm sm:text-base font-semibold">Eyl</p>
                         <p class="text-sm sm:text-base font-light">Host</p>
                     </div>
                     <div
                         class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
                         <img src="../assets/img/staff/lumine.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
+                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
                         <p class="text-sm sm:text-base font-semibold">Lumine</p>
                         <p class="text-sm sm:text-base font-light">Host</p>
                     </div>
                     <div
                         class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
                         <img src="../assets/img/staff/grizzly.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-4">
+                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
                         <p class="text-sm sm:text-base font-semibold">Grizzly</p>
                         <p class="text-sm sm:text-base font-light">Host</p>
                     </div>
