--- a/index.html
+++ b/index.html
@@ -33,30 +33,42 @@
         </button>
         <nav id="nav-menu" class="hidden md:flex gap-5">
             <ul class="flex flex-col md:flex-row gap-5">
-                <li><a href="#home" class="text-white hover:text-yellow-400 transition-all duration-300">Home</a></li>
-                <li><a href="#about" class="text-white hover:text-yellow-400 transition-all duration-300">About</a></li>
+                <li><a href="#home" class="text-white hover:text-yellow-500 transition-all duration-300">Home</a></li>
+                <li><a href="#about" class="text-white hover:text-yellow-500 transition-all duration-300">About</a></li>
                 <li><a href="channel/leaderboard.html"
-                        class="text-white hover:text-yellow-400 transition-all duration-300">Leaderboard</a></li>
+                        class="text-white hover:text-yellow-500 transition-all duration-300">Leaderboard</a></li>
                 <li><a href="channel/staff.html"
-                        class="text-white hover:text-yellow-400 transition-all duration-300">Staff</a></li>
+                        class="text-white hover:text-yellow-500 transition-all duration-300">Staff</a></li>
             </ul>
         </nav>
 
         <!-- Dropdown menu for mobile -->
         <nav id="dropdown-menu"
-            class="md:hidden absolute top-16 left-0 w-full bg-black/70 p-4 space-y-4 shadow-lg transform transition-all duration-300 hidden text-center">
-            <ul class="space-y-4"> <!-- Menambahkan space-y-4 untuk jarak antar list item -->
-                <li><a href="#home"
-                        class="text-white hover:bg-neutral-800 px-9 py-2 rounded transition-all duration-300">Home</a>
+            class="md:hidden absolute top-20 left-1/2 -translate-x-1/2 w-11/12 bg-black/80 border border-yellow-400 p-4 rounded-xl shadow-lg transform transition-all duration-300 hidden text-center backdrop-blur-lg">
+            <ul class="space-y-2">
+                <li>
+                    <a href="#home"
+                        class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
+                        🏠 Home
+                    </a>
                 </li>
-                <li><a href="#about"
-                        class="text-white hover:bg-neutral-800 px-9 py-2 rounded transition-all duration-300">About</a>
+                <li>
+                    <a href="#about"
+                        class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
+                        ℹ️ About
+                    </a>
                 </li>
-                <li><a href="channel/leaderboard.html"
-                        class="text-white hover:bg-neutral-800 px-9 py-2 rounded transition-all duration-300">Leaderboard</a>
+                <li>
+                    <a href="channel/leaderboard.html"
+                        class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
+                        🏆 Leaderboard
+                    </a>
                 </li>
-                <li><a href="channel/staff.html"
-                        class="text-white hover:bg-neutral-800 px-9 py-2 rounded transition-all duration-300">Staff</a>
+                <li>
+                    <a href="channel/staff.html"
+                        class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
+                        👥 Staff
+                    </a>
                 </li>
             </ul>
         </nav>
@@ -69,10 +81,11 @@
         <div class="absolute inset-0 bg-black/80 z-10"></div>
         <div class="relative z-20 mx-5 sm:mx-10 lg:mx-40 text-white">
             <div class="mb-5">
-                <h3 class="text-xl sm:text-2xl font-semibold tracking-wider text-amber-500" data-aos="fade-right">SMKN 5
+                <h3 class="text-xl sm:text-2xl font-semibold tracking-wider hover:text-yellow-500"
+                    data-aos="fade-right">SMKN 5
                     KIEV</h3>
                 <h1 class="text-4xl sm:text-5xl lg:text-7xl font-bold tracking-wider mb-4" data-aos="fade-right">BEST
-                    <span class="text-amber-500">INDONESIA</span> DISCORD SERVER
+                    <span class="hover:text-yellow-500">INDONESIA</span> DISCORD SERVER
                 </h1>
                 <p class="text-sm sm:text-lg lg:text-xl leading-relaxed lg:w-3/5" data-aos="fade-right">
                     SMKN 5 Kiev's Discord server is the best in Indonesia! It's a vibrant community where everyone can
@@ -80,7 +93,7 @@
                 </p>
             </div>
             <button
-                class="px-4 py-2 sm:px-6 sm:py-3 bg-amber-600 text-white font-medium text-sm sm:text-lg rounded-lg hover:bg-amber-700"
+                class="px-4 py-2 sm:px-6 sm:py-3 bg-yellow-500 text-white font-medium text-sm sm:text-lg rounded-lg hover:bg-yellow-600 transition-all duration-300"
                 data-aos="fade-right">
                 <a href="#about" class="text-white">Learn More</a>
             </button>
@@ -94,7 +107,7 @@
             <!-- Header Section -->
             <div class="text-center">
                 <h1 class="text-xl sm:text-2xl md:text-3xl font-bold tracking-wider">
-                    ABOUT - <span class="font-extrabold text-yellow-400">SMKN 5 KIEV</span>
+                    ABOUT - <span class="font-extrabold text-yellow-500">SMKN 5 KIEV</span>
                 </h1>
             </div>
             <!-- Content Section -->
@@ -137,7 +150,7 @@
                     <!-- Join Us Button -->
                     <div class="flex justify-center md:justify-start">
                         <a href="https://discord.gg/MwNE7Vfb6t" target="_blank"
-                            class="px-8 py-3 bg-yellow-500 text-white font-medium rounded-full mt-6 hover:bg-yellow-400 transition-all duration-300">
+                            class="px-8 py-3 bg-yellow-500 text-white font-medium rounded-lg mt-6 hover:bg-yellow-600 transition-all duration-300">
                             Join Us
                         </a>
                     </div>
