--- a/channel/leaderboard.html
+++ b/channel/leaderboard.html
@@ -27,31 +27,43 @@
         <nav id="nav-menu" class="hidden md:flex gap-5">
             <ul class="flex flex-col md:flex-row gap-5">
                 <li><a href="../index.html#home"
-                        class="text-white hover:text-yellow-400 transition-all duration-300">Home</a></li>
+                        class="text-white hover:text-yellow-500 transition-all duration-300">Home</a></li>
                 <li><a href="../index.html#about"
-                        class="text-white hover:text-yellow-400 transition-all duration-300">About</a></li>
+                        class="text-white hover:text-yellow-500 transition-all duration-300">About</a></li>
                 <li><a href="leaderboard.html"
-                        class="text-white hover:text-yellow-400 transition-all duration-300">Leaderboard</a></li>
-                <li><a href="staff.html" class="text-white hover:text-yellow-400 transition-all duration-300">Staff</a>
+                        class="text-white hover:text-yellow-500 transition-all duration-300">Leaderboard</a></li>
+                <li><a href="staff.html" class="text-white hover:text-yellow-500 transition-all duration-300">Staff</a>
                 </li>
             </ul>
         </nav>
 
         <!-- Dropdown menu for mobile -->
         <nav id="dropdown-menu"
-            class="md:hidden absolute top-16 left-0 w-full bg-black/70 p-4 space-y-4 shadow-lg transform transition-all duration-300 hidden text-center">
-            <ul class="space-y-4"> <!-- Menambahkan space-y-4 untuk jarak antar list item -->
-                <li><a href="../index.html#home"
-                        class="text-white hover:bg-neutral-800 px-9 py-2 rounded transition-all duration-300">Home</a>
+            class="md:hidden absolute top-20 left-1/2 -translate-x-1/2 w-11/12 bg-black/80 border border-yellow-400 p-4 rounded-xl shadow-lg transform transition-all duration-300 hidden text-center backdrop-blur-lg">
+            <ul class="space-y-2">
+                <li>
+                    <a href="../index.html#home"
+                        class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
+                        🏠 Home
+                    </a>
                 </li>
-                <li><a href="../index.html/#about"
-                        class="text-white hover:bg-neutral-800 px-9 py-2 rounded transition-all duration-300">About</a>
+                <li>
+                    <a href="../index.html#about"
+                        class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
+                        ℹ️ About
+                    </a>
                 </li>
-                <li><a href="leaderboard.html"
-                        class="text-white hover:bg-neutral-800 px-9 py-2 rounded transition-all duration-300">Leaderboard</a>
+                <li>
+                    <a href="channel/leaderboard.html"
+                        class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
+                        🏆 Leaderboard
+                    </a>
                 </li>
-                <li><a href="staff.html"
-                        class="text-white hover:bg-neutral-800 px-9 py-2 rounded transition-all duration-300">Staff</a>
+                <li>
+                    <a href="channel/staff.html"
+                        class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
+                        👥 Staff
+                    </a>
                 </li>
             </ul>
         </nav>
@@ -65,7 +77,7 @@
                 <div class="leaderboardBox-item">
                     <div class="leaderboardBox-itemTitle text-center mb-6">
                         <h1 class="text-xl sm:text-2xl md:text-3xl  font-bold">
-                            MONTHLY <span class="text-yellow-400">LEADERBOARD</span>
+                            MONTHLY <span class="text-yellow-500">LEADERBOARD</span>
                         </h1>
                         <p class="text-gray-400 text-sm mt-2">Top Monthly Season SMKN 5 KIEV</p>
                     </div>
