--- a/channel/leaderboard.html
+++ b/channel/leaderboard.html
@@ -54,13 +54,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="channel/leaderboard.html"
+                    <a href="leaderboard.html"
                         class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
                         🏆 Leaderboard
                     </a>
                 </li>
                 <li>
-                    <a href="channel/staff.html"
+                    <a href="staff.html"
                         class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
                         👥 Staff
                     </a>
