--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
         <div class="absolute inset-0 bg-black/80 z-10"></div>
         <div class="relative z-20 mx-5 sm:mx-10 lg:mx-40 text-white">
             <div class="mb-5">
-                <h3 class="text-xl sm:text-2xl font-semibold tracking-wider hover:text-yellow-500"
-                    data-aos="fade-right">SMKN 5
+                <h3 class="text-xl sm:text-2xl font-semibold tracking-wide text-yellow-500" data-aos="fade-right">SMKN
+                    5
                     KIEV</h3>
                 <h1 class="text-4xl sm:text-5xl lg:text-7xl font-bold tracking-wider mb-4" data-aos="fade-right">BEST
-                    <span class="hover:text-yellow-500">INDONESIA</span> DISCORD SERVER
+                    <span class="text-yellow-500">INDONESIA</span> DISCORD SERVER
                 </h1>
                 <p class="text-sm sm:text-lg lg:text-xl leading-relaxed lg:w-3/5" data-aos="fade-right">
                     SMKN 5 Kiev's Discord server is the best in Indonesia! It's a vibrant community where everyone can
