--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <!-- SECTION HOME -->
     <section class="h-screen bg-cover bg-center bg-no-repeat flex items-center relative overflow-hidden" id="home"
-        style="background-image: url('assets/img/home2.jpeg');">
+        style="background-image: url('assets/img/yuki.png');">
         <div class="absolute inset-0 bg-black/80 z-10"></div>
         <div class="relative z-20 mx-5 sm:mx-10 lg:mx-40 text-white">
             <div class="mb-5">
