--- a/channel/staff.html
+++ b/channel/staff.html
@@ -27,12 +27,15 @@
         <nav id="nav-menu" class="hidden md:flex gap-5">
             <ul class="flex flex-col md:flex-row gap-5">
                 <li><a href="../index.html#home"
-                        class="text-white hover:text-yellow-400 transition-all duration-300">Home</a></li>
+                        class="text-white hover:text-yellow-500 transition-all duration-300">Home</a></li>
                 <li><a href="../index.html#about"
-                        class="text-white hover:text-yellow-400 transition-all duration-300">About</a></li>
+                        class="text-white hover:text-yellow-500 transition-all duration-300">About</a></li>
                 <li><a href="leaderboard.html"
-                        class="text-white hover:text-yellow-400 transition-all duration-300">Leaderboard</a></li>
-                <li><a href="staff.html" class="text-white hover:text-yellow-400 transition-all duration-300">Staff</a>
+                        class="text-white hover:text-yellow-500 transition-all duration-300">Leaderboard</a></li>
+                <li><a href="staff.html" class="text-white hover:text-yellow-500 transition-all duration-300">Staff</a>
+                </li>
+                <li><a href="donate.html"
+                        class="text-white hover:text-yellow-500 transition-all duration-300">Donate</a>
                 </li>
             </ul>
         </nav>
@@ -64,9 +67,14 @@
                         class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
                         👥 Staff
                     </a>
+                    <a href="donate.html"
+                        class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
+                        💰 Donate
+                    </a>
                 </li>
             </ul>
         </nav>
+
     </header>
 
     <!-- STAFF -->
