--- a/channel/leaderboard.html
+++ b/channel/leaderboard.html
@@ -34,6 +34,9 @@
                         class="text-white hover:text-yellow-500 transition-all duration-300">Leaderboard</a></li>
                 <li><a href="staff.html" class="text-white hover:text-yellow-500 transition-all duration-300">Staff</a>
                 </li>
+                <li><a href="donate.html"
+                        class="text-white hover:text-yellow-500 transition-all duration-300">Donate</a>
+                </li>
             </ul>
         </nav>
 
@@ -64,9 +67,14 @@
                         class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
                         👥 Staff
                     </a>
+                    <a href="donate.html"
+                        class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
+                        💰 Donate
+                    </a>
                 </li>
             </ul>
         </nav>
+
     </header>
 
     <!-- Leaderboard -->
