--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                         class="text-white hover:text-yellow-500 transition-all duration-300">Leaderboard</a></li>
                 <li><a href="channel/staff.html"
                         class="text-white hover:text-yellow-500 transition-all duration-300">Staff</a></li>
+                <li><a href="channel/donate.html"
+                        class="text-white hover:text-yellow-500 transition-all duration-300">Donate</a></li>
             </ul>
         </nav>
 
@@ -68,6 +70,10 @@
                     <a href="channel/staff.html"
                         class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
                         👥 Staff
+                    </a>
+                    <a href="channel/donate.html"
+                        class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
+                        💰 Donate
                     </a>
                 </li>
             </ul>
