--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
             data-aos="fade-up">
             <!-- Header Section -->
             <div class="text-center">
-                <h1 class="text-xl sm:text-2xl md:text-3xl font-bold tracking-wider">
-                    ABOUT - <span class="font-extrabold text-yellow-500">SMKN 5 KIEV</span>
+                <h1 class="text-xl sm:text-2xl md:text-3xl  font-bold">
+                    ABOUT <span class="text-yellow-500">SMKN 5 KIEV</span>
                 </h1>
             </div>
             <!-- Content Section -->
@@ -147,7 +147,8 @@
                     <div class="space-y-4">
                         <h4 class="text-lg sm:text-xl lg:text-2xl font-semibold">FOUNDER</h4>
                         <p class="text-gray-400 text-sm sm:text-base leading-relaxed">
-                            I am the creator of this server. Initially, I created this server for playing Minecraft with
+                            I am Phy0n the creator of this server. Initially, I created this server for playing
+                            Minecraft with
                             friends. Over time, I decided to turn this server into a Minecraft community. Later, it
                             evolved
                             into a regular community server for casual chatting.
