--- a/channel/donate.html
+++ b/channel/donate.html
@@ -85,9 +85,9 @@
                 <div class="donateBox-item">
                     <div class="donateBox-itemTitle text-center mb-6">
                         <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">
-                            SUPPORT US <span class="text-yellow-500">BY DONATING</span>
+                            SUPPORT US <span class="text-yellow-500">BY DONATE TO SERVER</span>
                         </h1>
-                        <p class="text-gray-400 text-sm mt-2">Your donation helps us grow and improve</p>
+                        <p class="text-gray-400 text-sm mt-2">Donasi dari kamu bisa membantu kami membangun negeri</p>
                     </div>
 
                     <!-- Container for donation options -->
