--- a/channel/leaderboard.html
+++ b/channel/leaderboard.html
@@ -105,7 +105,7 @@
                         </div>
                         <!-- Item 2 -->
                         <div
-                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all">
+                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
                             <div class="w-12 h-12 sm:w-14 sm:h-14">
                                 <img src="../assets/img/s2.png" alt="s2"
                                     class="w-full h-full object-cover rounded-full border-2 border-gray-500">
@@ -116,13 +116,46 @@
                         </div>
                         <!-- Item 3 -->
                         <div
-                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all">
+                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
                             <div class="w-12 h-12 sm:w-14 sm:h-14">
                                 <img src="../assets/img/s3.png" alt="s3"
                                     class="w-full h-full object-cover rounded-full border-2 border-gray-500">
                             </div>
                             <div>
                                 <p class="text-sm sm:text-base font-semibold text-white">🥉 Season #3 | nsx4y</p>
+                            </div>
+                        </div>
+                        <!-- Item 4 -->
+                        <div
+                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            <div class="w-12 h-12 sm:w-14 sm:h-14">
+                                <img src="../assets/img/s4.png" alt="s3"
+                                    class="w-full h-full object-cover rounded-full border-2 border-gray-500">
+                            </div>
+                            <div>
+                                <p class="text-sm sm:text-base font-semibold text-white">🏅 Season #4 | Yura</p>
+                            </div>
+                        </div>
+                        <!-- Item 5 -->
+                        <div
+                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            <div class="w-12 h-12 sm:w-14 sm:h-14">
+                                <img src="../assets/img/s5.png" alt="s3"
+                                    class="w-full h-full object-cover rounded-full border-2 border-gray-500">
+                            </div>
+                            <div>
+                                <p class="text-sm sm:text-base font-semibold text-white">🏅 Season #5 | Tame</p>
+                            </div>
+                        </div>
+                        <!-- Item 6 -->
+                        <div
+                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            <div class="w-12 h-12 sm:w-14 sm:h-14">
+                                <img src="../assets/img/s6.png" alt="s3"
+                                    class="w-full h-full object-cover rounded-full border-2 border-gray-500">
+                            </div>
+                            <div>
+                                <p class="text-sm sm:text-base font-semibold text-white">🏅 Season #6 | Tame</p>
                             </div>
                         </div>
                     </div>
