--- a/channel/donate.html
+++ b/channel/donate.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="../assets/img/logo.png">
+    <script src="https://kit.fontawesome.com/924d8b81d8.js" crossorigin="anonymous"></script>
     <title>LEADERBOARD</title>
 </head>
 
@@ -191,21 +192,39 @@
     <!-- Footer -->
     <section id="footer" class="bg-zinc-950 text-white py-12">
         <div class="container mx-auto px-4">
-            <div class=" flex-col md:flex-row justify-between items-center">
+            <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="mb-8 md:mb-0 md:mr-8" data-aos="fade-out">
                     <h1 class="text-xl sm:text-3xl font-bold mb-4 text-yellow-500">SMKN 5 KIEV</h1>
-                    <p class="text-sm sm:text-base leading-relaxed">
+                    <p class="text-sm sm:text-base leading-relaxed w-auto">
                         We created this server to have fun and build a friendly community. We’d be thrilled if you
                         joined us, and we’re here to welcome you with open arms! Whether you’re looking to make new
-                        friends,
-                        share your interests, or just chill, there’s a place for everyone here. Join us, and let’s make
-                        some
-                        great memories together!
+                        friends, share your interests, or just chill, there’s a place for everyone here. Join us, and
+                        let’s
+                        make
+                        some great memories together!
                     </p>
+                </div>
+                <div class="flex flex-col items-center md:items-end">
+                    <h2 class="text-lg sm:text-xl font-semibold mb-4">Follow Us</h2>
+                    <div class="flex gap-4">
+                        <a href="https://discord.gg/MwNE7Vfb6t"
+                            class="text-yellow-500 hover:text-yellow-400 transition">
+                            <i class="fab fa-discord text-2xl"></i>
+                        </a>
+                        <a href="https://www.tiktok.com/@smkn5kiev.id"
+                            class="text-yellow-500 hover:text-yellow-400 transition">
+                            <i class="fab fa-tiktok text-2xl"></i>
+                        </a>
+                        <a href="https://www.instagram.com/smkn5kiev.id/"
+                            class="text-yellow-500 hover:text-yellow-400 transition">
+                            <i class="fab fa-instagram text-2xl"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
 </body>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
