--- a/channel/recruitment.html
+++ b/channel/recruitment.html
@@ -85,94 +85,90 @@
 
     </header>
 
-    <!-- Leaderboard -->
-    <div class="sectionLeaderboard bg-black/90 bg-cover bg-center min-h-screen flex flex-col justify-center text-white py-32"
-        id="leaderboard">
-        <div class="leaderboardContainer container mx-auto px-4" data-aos="fade-up">
-            <div class="leaderboardBox bg-black/25 bg-opacity-75 rounded-lg shadow-lg p-7">
-                <div class="leaderboardBox-item">
-                    <div class="leaderboardBox-itemTitle text-center mb-6">
-                        <h1 class="text-xl sm:text-2xl md:text-3xl  font-bold">
-                            MONTHLY <span class="text-yellow-500">LEADERBOARD</span>
-                        </h1>
-                        <p class="text-gray-400 text-sm mt-2">Top Monthly Season SMKN 5 KIEV</p>
+    <!-- Recruitment Card -->
+    <div class="recruitmentCard bg-black/90 bg-cover bg-center min-h-screen flex flex-col justify-center text-white py-32"
+        id="recruitment">
+        <div class="recruitmentContainer container mx-auto px-4" data-aos="fade-up">
+            <div class="recruitmentBox bg-black/25 bg-opacity-75 rounded-lg shadow-lg p-7">
+                <div class="recruitmentBox-item">
+                    <div class="recruitmentBox-itemTitle text-center mb-6">
+                        <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">RECRUITMENT <span
+                                class="text-yellow-500">STAFF</span></h1>
+                        <p class="text-gray-400 text-sm mt-2">Bergabunglah dengan tim kami dan bantu membangun komunitas
+                            yang lebih baik!</p>
                     </div>
-
-                    <!-- Kontainer untuk item -->
-                    <div class="leaderboardBox-itemList flex flex-wrap gap-4 justify-center">
-                        <!-- Item 1 -->
+                    <div class="recruitmentBox-itemList flex flex-wrap gap-4 justify-center">
                         <div
-                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
-                            <div class="w-12 h-12 sm:w-14 sm:h-14">
-                                <img src="../assets/img/s1.png" alt="s1"
-                                    class="w-full h-full object-cover rounded-full border-2 border-gray-500">
-                            </div>
-                            <div>
-                                <p class="text-sm sm:text-base font-semibold text-white">🏆 Season #1 | Luhut</p>
-                            </div>
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🛡️ Moderator Chat</h2>
+                            <p class="text-sm text-gray-300 text-center">Membantu menjaga suasana obrolan tetap nyaman
+                                dan
+                                kondusif.</p>
+                            <p class="text-xs text-red-500 text-center mt-auto">Status : Close</p>
                         </div>
-                        <!-- Item 2 -->
                         <div
-                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
-                            <div class="w-12 h-12 sm:w-14 sm:h-14">
-                                <img src="../assets/img/s2.png" alt="s2"
-                                    class="w-full h-full object-cover rounded-full border-2 border-gray-500">
-                            </div>
-                            <div>
-                                <p class="text-sm sm:text-base font-semibold text-white">🥈 Season #2 | Luhut</p>
-                            </div>
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🎤 Host Event</h2>
+                            <p class="text-sm text-gray-300 text-center">Mengatur dan memimpin event seru untuk
+                                komunitas.
+                            </p>
+                            <p class="text-xs text-yellow-500 text-center mt-auto">Status : Open</p>
                         </div>
-                        <!-- Item 3 -->
                         <div
-                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
-                            <div class="w-12 h-12 sm:w-14 sm:h-14">
-                                <img src="../assets/img/s3.png" alt="s3"
-                                    class="w-full h-full object-cover rounded-full border-2 border-gray-500">
-                            </div>
-                            <div>
-                                <p class="text-sm sm:text-base font-semibold text-white">🥉 Season #3 | nsx4y</p>
-                            </div>
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🌟 Brand Ambassador</h2>
+                            <p class="text-sm text-gray-300 text-center">Meningkatkan citra server di dunia luar.</p>
+                            <p class="text-xs text-yellow-500 text-center mt-auto">Status : Open</p>
                         </div>
-                        <!-- Item 4 -->
                         <div
-                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
-                            <div class="w-12 h-12 sm:w-14 sm:h-14">
-                                <img src="../assets/img/s4.png" alt="s3"
-                                    class="w-full h-full object-cover rounded-full border-2 border-gray-500">
-                            </div>
-                            <div>
-                                <p class="text-sm sm:text-base font-semibold text-white">🏅 Season #4 | Yura</p>
-                            </div>
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🎭 Event Organizer</h2>
+                            <p class="text-sm text-gray-300 text-center">Merencanakan dan menjalankan acara kreatif
+                                untuk
+                                komunitas.</p>
+                            <p class="text-xs text-yellow-500 text-center mt-auto">Status : Open</p>
                         </div>
-                        <!-- Item 5 -->
                         <div
-                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
-                            <div class="w-12 h-12 sm:w-14 sm:h-14">
-                                <img src="../assets/img/s5.png" alt="s3"
-                                    class="w-full h-full object-cover rounded-full border-2 border-gray-500">
-                            </div>
-                            <div>
-                                <p class="text-sm sm:text-base font-semibold text-white">🏅 Season #5 | Tame</p>
-                            </div>
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🤝 Partner Manager</h2>
+                            <p class="text-sm text-gray-300 text-center">Menjalin kerja sama dengan komunitas atau
+                                organisasi lainnya.</p>
+                            <p class="text-xs text-yellow-500 text-center mt-auto">Status : Open</p>
                         </div>
-                        <!-- Item 6 -->
                         <div
-                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
-                            <div class="w-12 h-12 sm:w-14 sm:h-14">
-                                <img src="../assets/img/s6.png" alt="s3"
-                                    class="w-full h-full object-cover rounded-full border-2 border-gray-500">
-                            </div>
-                            <div>
-                                <p class="text-sm sm:text-base font-semibold text-white">🏅 Season #6 | Tame</p>
-                            </div>
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🎨 Designer</h2>
+                            <p class="text-sm text-gray-300 text-center">Membantu mendesain konten visual yang menarik.
+                            </p>
+                            <p class="text-xs text-red-500 text-center mt-auto">Status : Close</p>
                         </div>
+                        <div
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            <h2 class="text-lg sm:text-xl font-semibold text-white text-center">📢 Human Resource
+                                Development</h2>
+                            <p class="text-sm text-gray-300 text-center">Membantu merekrut dan mengelola staff lainnya.
+                            </p>
+                            <p class="text-xs text-red-500 text-center mt-auto">Status : Close</p>
+                        </div>
+                    </div>
+                    <div class="text-center my-9 justify-center flex">
+                        <p class="sm:max-w-[60vw] text-gray-400 text-sm ">Semua posisi ini tidak dibayar. Kami mencari
+                            orang-orang yang sukarela dan
+                            memiliki keinginan
+                            tulus untuk
+                            membantu server ini berkembang. Semangatmu untuk berkontribusi dan membangun komunitas yang
+                            lebih baik adalah
+                            hal yang paling kami hargai!</p>
+                    </div>
+                    <div class="text-center mt-6">
+                        <a href="https://forms.gle/o9TtYbo6Yz3RjpxVA" target="_blank"
+                            class="px-6 py-3 bg-yellow-500 text-black font-bold rounded-lg shadow-lg hover:bg-yellow-600 transition-all">Bergabung
+                            ke Staff</a>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
-
     <!-- Footer -->
     <section id="footer" class="bg-zinc-950 text-white py-12">
         <div class="container mx-auto px-4">
