--- a/channel/staff.html
+++ b/channel/staff.html
@@ -36,7 +36,9 @@
                 <li><a href="staff.html" class="text-white hover:text-yellow-500 transition-all duration-300">Staff</a>
                 </li>
                 <li><a href="donate.html"
-                        class="text-white hover:text-yellow-500 transition-all duration-300">Donate</a>
+                        class="text-white hover:text-yellow-500 transition-all duration-300">Donate</a></li>
+                <li><a href="recruitment.html"
+                        class="text-white hover:text-white bg-yellow-500 rounded-lg items-center px-5 py-2 transition-all duration-300">Recruitment</a>
                 </li>
             </ul>
         </nav>
@@ -71,6 +73,10 @@
                     <a href="donate.html"
                         class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
                         💰 Donate
+                    </a>
+                    <a href="recruitment.html"
+                        class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
+                        📚 Recruitment
                     </a>
                 </li>
             </ul>
