--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                         class="text-white hover:text-yellow-500 transition-all duration-300">Staff</a></li>
                 <li><a href="channel/donate.html"
                         class="text-white hover:text-yellow-500 transition-all duration-300">Donate</a></li>
+                <li><a href="channel/recruitment.html"
+                        class="text-white hover:text-white bg-yellow-500 rounded-lg items-center px-5 py-2 transition-all duration-300">Recruitment</a>
+                </li>
             </ul>
         </nav>
 
@@ -75,6 +78,10 @@
                     <a href="channel/donate.html"
                         class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
                         💰 Donate
+                    </a>
+                    <a href="channel/recruitment.html"
+                        class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">
+                        📚 Recruitment
                     </a>
                 </li>
             </ul>
