--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header
         class="fixed top-0 left-0 flex items-center justify-between px-6 py-4 w-full z-50 bg-black/50 backdrop-blur-md text-white">
         <div>
-            <h1 class="text-2xl font-bold">SMKN<span class="font-extrabold">5KIEV</span></h1>
+            <h1 class="text-2xl font-bold">SMKN5<span class="font-extrabold text-yellow-500">K1EV</span></h1>
         </div>
         <button id="hamburger"
             class="block md:hidden focus:outline-none transition-transform duration-300 transform hover:scale-125"
